# src/docs/swagger.json
@@ -122,6 +122,24 @@
           }
         }
       }
+    },
+    "/api/v1/products/": {
+      "post": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      },
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
     }
   },
   "components": {
